--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,8 +253,9 @@ header .intro-text {
 
 #features .service-card {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background: rgba(255, 255, 255, 0.9);
+  background: linear-gradient(135deg, rgb(255, 255, 255) 0%, rgb(215, 225, 235) 100%);
   height: 307px;
+  color: #000;
 }
 
 #features .service-card:hover {
@@ -573,7 +574,7 @@ header .intro-text {
 }
 /* Contact Section */
 #contact {
-  padding: 100px 0 60px;
+  padding: 100px 0 80px;
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   color: rgba(255, 255, 255, 0.75);
 }
