--- a/src/components/pages/pages-style/service-page.css
+++ b/src/components/pages/pages-style/service-page.css
@@ -10,13 +10,13 @@
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
-    padding: 20px 20px; /* Adjusted padding */
+    padding: 20px 20px; 
 }
 
 .services-info-title {
     font-size: 36px;
     margin-bottom: 10px;
-    color: #333; /* Dark text color */
+    color: #333; 
 }
 
 .services-info-details {
@@ -26,10 +26,10 @@
 }
 
 .services-info-description {
-    font-size: 16px; /* Adjusted font size */
+    font-size: 16px; 
     line-height: 1.5;
     margin-bottom: 10px;
-    color: #666; /* Medium-dark text color */
+    color: #666; 
 }
 
 
@@ -40,24 +40,25 @@
 }
 
 .service-card {
-    background: linear-gradient(135deg, #3498db, #2980b9); /* Gradient background */
-    color: #fff; /* White text */
+    background: linear-gradient(135deg, #3498db, #2980b9); 
+    color: #fff; 
     padding: 10px;
     border-radius: 20px;
-    width: 400px;
+    width: 500px;
     margin: 20px;
     transition: transform 0.3s ease;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Enhanced shadow */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .service-card:hover {
-    transform: translateY(-5px); /* Lift on hover */
-    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3); /* Bigger shadow on hover */
+    transition: all ease-in-out 0.3s;
+    transform: translateY(-10px); 
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3); 
 }
 
 .service-card h2 {
-    margin-bottom: 15px; /* Slightly bigger margin */
-    font-size: 24px; /* Larger font size */
+    margin-bottom: 15px; 
+    font-size: 24px; 
 }
 
 .service-card ul {
@@ -66,55 +67,72 @@
 }
 
 .service-card li {
-    margin-bottom: 15px; /* Slightly bigger margin */
+    margin-bottom: 15px;
 }
 
-.cloud-services {
-    border: 2px solid #2980b9; /* Darker blue border */
-}
-
-.devops-services {
+.services-content {
     border: 2px solid #1A5276;
 }
 
 .inner-service-container {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .inner-service-card {
-    background: linear-gradient(135deg, #1A5276, #2980b9); /* Gradient background */
-    color: #fff; /* White text */
+    background: linear-gradient(135deg, #f6f9fc, #fff); 
+    color: #000; 
     padding: 15px;
     border-radius: 10px;
     width: 80%;
-    margin: 20px auto; /* Center horizontally */
+    margin: 20px auto; 
     transition: transform 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add some shadow */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    font-weight: bold;
+    display: flex;
+    align-items: center;
 }
+
+.icon-container {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.icon-container img {
+    width: 100%;
+    height: 100%;
+}
+
+.service-content {
+    flex: 1; 
+}
+
 
 .inner-service-card:hover {
-    transform: scale(1.05); /* Grow on hover */
+    transform: scale(1.05); 
 }
 
 
-/* Media query for responsiveness */
 @media (max-width: 768px) {
     .service-card {
-        width: 90%; /* Adjusted width for smaller screens */
+        width: 90%;
     }
 
     .inner-service-card {
-        width: 90%; /* Adjusted width for smaller screens */
+        width: 90%; 
     }
+    
     .services-info {
-        padding: 40px 10px; /* Adjusted padding for smaller screens */
+        padding: 40px 10px; 
     }
     
     .services-info-title {
-        font-size: 30px; /* Adjusted font size for smaller screens */
+        font-size: 30px;
     }
     
     .services-info-description {
-        font-size: 14px; /* Adjusted font size for smaller screens */
+        font-size: 14px; 
     }
 }
