--- a/public/css/style.css
+++ b/public/css/style.css
@@ -209,7 +209,7 @@ a:focus,
   width: 100%;
   height: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
+  background: url(../img/landing-img.png) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
