--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ button {
 .PricingApp header .header-topic {
   text-align: center;
   color: var(--neutral-dark-grayish-blue);
+  padding-bottom: 12px;
 }
 
 .PricingApp header > .header-row {
@@ -142,13 +143,13 @@ button {
 }
 
 .PricingApp .pricing-cards {
-  margin-top: 4em;
+  margin: 5% auto; 
   min-height: 30rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 2%;
 }
+
 
 @media screen and (max-width: 800px) {
   .PricingApp {
