--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   position: relative;
   min-height: 100vh;
   min-height: 100dvh;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: var(--primary-fw);
   font-size: var(--primary-fs);
   display: grid;
@@ -70,7 +70,7 @@
 }
 
 button {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: var(--primary-fw);
   font-size: var(--primary-fs);
 }
