--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,6 +216,37 @@ a:focus,
   background-size: cover;
   -o-background-size: cover;
 }
+
+.intro::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit; 
+  z-index: -1;
+}
+
+@media (max-width: 1200px) {
+  .intro {
+    height: 80vh; 
+  }
+}
+
+@media (max-width: 768px) {
+  .intro {
+    height: 60vh; 
+  }
+}
+
+@media (max-width: 480px) {
+  .intro {
+    height: 50vh; 
+  }
+}
+
+
 /* .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
 }
